added forgot passord recovery

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -7,3 +7,10 @@ JWT_SECRET = HWHAKUFBWJATVWLFHSHEGKFUSJKSCJJSKDSJNSJXJSJSB
 JWT_EXPIRE = 5d
 
 COOKIE_EXPIRE = 5
+
+
+SMTP_SERVICE = gmail
+SMTP_MAIL = deepakthapa1423@gmail.com
+SMTP_PASSWORD = "veuv iepc amtx dkxy"
+SMTP_HOST = smtp.gmail.com
+SMTP_PORT = 465
