--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "@phosphor-icons/react": "^2.1.7",
     "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.7.2",
@@ -19,6 +22,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
