--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Root gitignore
+
 # Logs
 logs
 *.log
@@ -7,6 +9,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 *.env
+
 
 node_modules
 *.local
