--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^5.4.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
     "@phosphor-icons/react": "^2.1.7",
     "@redux-devtools/extension": "^3.3.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "antd": "^5.20.6",
     "axios": "^1.7.2",
+    "country-state-city": "^3.2.1",
     "overlay-navbar": "^1.2.3",
     "react": "^18.3.1",
     "react-alert": "^7.0.3",
