--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.3",
+    "stripe": "^17.3.1",
     "validator": "^13.12.0"
   }
 }
